private-hosting/homeassistant/ingress-homeassistant.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  ingressClassName: traefik
  rules:
    - host: ha.lab.theoboursy.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port: { number: 8123 }
